<resources>
    <string name="app_name">RxJavaPractices</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="map">Map</string>
    <string name="flat_map">flatMap</string>
    <string name="concat_map">concatMap</string>
    <string name="register_login"><![CDATA[Register&Login]]></string>
    <string name="zip">zip</string>
    <string name="zip_info">Zip Info</string>
    <string name="flowable">Flowable</string>
    <string name="start_handle">Start Handle</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
</resources>
