<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chiachen.rxjavapractices.activity.MainActivity">
    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/register_login"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/register_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/login"
        />

    <Button
        android:id="@+id/zip_info"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/zip_info"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/map"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/map"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/flatMap"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/flat_map"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/concatMap"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/concat_map"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flatMap"/>

    <Button
        android:id="@+id/zip"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/zip"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"/>


    <Button
        android:id="@+id/flowable"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/flowable"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/register_login"/>

    <Button
        android:id="@+id/start_handle"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/start_handle"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/register_login"
        app:layout_constraintLeft_toRightOf="@+id/flowable"/>

</android.support.constraint.ConstraintLayout>
